// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-sqle-ce render route sqle index page 1`] = `
<body>
  <div>
    <div>
      null
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route custom-create 1`] = `
<body>
  <div>
    <div>
      createCustomRule
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route custom-update 1`] = `
<body>
  <div>
    <div>
      updateCustomRule
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route global-create 1`] = `
<body>
  <div>
    <div>
      globalRuleTemplateCreate
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route global-detail 1`] = `
<body>
  <div>
    <div>
      globalRuleTemplateDetail
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route global-import 1`] = `
<body>
  <div>
    <div>
      globalRuleTemplateImport
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route global-update 1`] = `
<body>
  <div>
    <div>
      globalRuleTemplateUpdate
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route reportStatistics 1`] = `
<body>
  <div>
    <div>
      reportStatistics
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route rule 1`] = `
<body>
  <div>
    <div>
      rule
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle global router render sqle router when version is ce render route ruleManager 1`] = `
<body>
  <div>
    <div>
      ruleTemplateManagement
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render route analyze render route auditPlanDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanDetailAnalyze
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render route analyze render route workflowAnalyze 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlExecWorkflow"
    >
      <div>
        workflowAnalyze
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render operationRecord 1`] = `
<body>
  <div>
    <div>
      operationRecord
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route dashboard 1`] = `
<body>
  <div>
    <div>
      dashboard
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route plan render route auditPlanCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route plan render route auditPlanDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route plan render route auditPlanDetailReport 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanDetailReport
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route plan render route auditPlanList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route plan render route auditPlanUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="plane"
    >
      <div>
        auditPlanUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route pluginAuditList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="pluginAudit"
    >
      <div>
        pluginAuditList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route progress render progressDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="progress"
    >
      <div>
        progressDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route projectOverview 1`] = `
<body>
  <div>
    <div>
      projectOverview
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplateCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate import 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplateImport
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate list 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplateDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplateDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplateUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="ruleTemplate"
    >
      <div>
        ruleTemplateUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlAudit"
    >
      <div>
        sqlAuditCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlAudit"
    >
      <div>
        sqlAuditDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlAudit"
    >
      <div>
        sqlAuditList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route sqlManagement render sqlManagement 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlManagement"
    >
      <div>
        SQLManagement
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route sqlOptimization 1`] = `
<body>
  <div>
    <div>
      sqlOptimization
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route workflow render route create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlExecWorkflow"
    >
      <div>
        createSqlExecWorkflow
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route workflow render route detail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlExecWorkflow"
    >
      <div>
        workflowDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render route workflow render route list 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="sqlExecWorkflow"
    >
      <div>
        sqlExecWorkflowList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle project detail router render sqle project detail router when version is ce render whitelist 1`] = `
<body>
  <div>
    <div>
      Whitelist
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ce render sqle route data snap 1`] = `
[
  {
    "element": <div>
      home
    </div>,
    "key": "home",
    "path": "/",
  },
  {
    "element": <div>
      userCenter
    </div>,
    "key": "userCenter",
    "path": "user-center",
  },
  {
    "element": <div>
      system
    </div>,
    "key": "system",
    "path": "system",
  },
  {
    "element": <div>
      account
    </div>,
    "key": "account",
    "path": "account",
  },
  {
    "children": [
      {
        "element": <div>
          member
        </div>,
        "key": "member",
        "path": ":projectID/member",
      },
      {
        "children": [
          {
            "element": <div>
              dataSourceList
            </div>,
            "key": "dataSourceList",
            "path": "",
          },
          {
            "element": <div>
              dataSourceCreate
            </div>,
            "key": "dataSourceCreate",
            "path": "create",
          },
          {
            "element": <div>
              dataSourceUpdate
            </div>,
            "key": "dataSourceUpdate",
            "path": "update/:dbServiceUid",
          },
        ],
        "element": <div
          data-test-parent-id="dataSource"
        >
          <Outlet />
        </div>,
        "key": "dataSource",
        "path": ":projectID/db-services",
      },
      {
        "element": <div>
          syncDataSource
        </div>,
        "key": "syncDataSource",
        "path": ":projectID/sync-data-source",
      },
      {
        "element": <div>
          dataExportManagement
        </div>,
        "key": "dataExportManagement",
        "path": ":projectID/data/export",
      },
      {
        "element": <div>
          cloudBeaver
        </div>,
        "key": "cloudBeaver",
        "path": ":projectID/cloud-beaver",
      },
    ],
    "element": <UNDEFINED />,
    "key": "projectDetail",
    "path": "project/*",
  },
  {
    "element": <div>
      reportStatistics
    </div>,
    "key": "reportStatistics",
    "path": "sqle/report-statistics",
  },
  {
    "element": <div>
      rule
    </div>,
    "key": "rule",
    "path": "sqle/rule",
  },
  {
    "children": [
      {
        "element": <div>
          ruleTemplateManagement
        </div>,
        "key": "ruleTemplateManagement",
        "path": "",
      },
      {
        "element": <div>
          globalRuleTemplateCreate
        </div>,
        "key": "globalRuleTemplateCreate",
        "path": "global-create",
      },
      {
        "element": <div>
          globalRuleTemplateImport
        </div>,
        "key": "globalRuleTemplateImport",
        "path": "global-import",
      },
      {
        "element": <div>
          globalRuleTemplateUpdate
        </div>,
        "key": "globalRuleTemplateUpdate",
        "path": "global-update/:templateName",
      },
      {
        "element": <div>
          globalRuleTemplateDetail
        </div>,
        "key": "globalRuleTemplateDetail",
        "path": "global-detail/:templateName/:dbType",
      },
      {
        "element": <div>
          createCustomRule
        </div>,
        "key": "createCustomRule",
        "path": "custom-create",
      },
      {
        "element": <div>
          updateCustomRule
        </div>,
        "key": "updateCustomRule",
        "path": "custom-update/:ruleID",
      },
    ],
    "key": "ruleManager",
    "path": "sqle/rule-manager",
    "role": [
      "admin",
    ],
  },
  {
    "children": [
      {
        "element": <div>
          projectOverview
        </div>,
        "key": "projectOverview",
        "path": ":projectID/overview",
      },
      {
        "children": [
          {
            "element": <div>
              sqlExecWorkflowList
            </div>,
            "key": "sqlExecWorkflowList",
            "path": "",
          },
          {
            "element": <div>
              createSqlExecWorkflow
            </div>,
            "key": "createSqlExecWorkflow",
            "path": "create",
          },
          {
            "element": <div>
              workflowAnalyze
            </div>,
            "key": "workflowAnalyze",
            "path": ":taskId/:sqlNum/analyze",
          },
          {
            "element": <div>
              workflowDetail
            </div>,
            "key": "workflowDetail",
            "path": ":workflowId",
          },
        ],
        "element": <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <Outlet />
        </div>,
        "key": "sqlExecWorkflow",
        "path": ":projectID/exec-workflow",
      },
      {
        "children": [
          {
            "element": <div>
              sqlAuditList
            </div>,
            "key": "sqlAuditList",
            "path": "",
          },
          {
            "element": <div>
              sqlAuditCreate
            </div>,
            "key": "sqlAuditCreate",
            "path": "create",
          },
          {
            "element": <div>
              sqlAuditDetail
            </div>,
            "key": "sqlAuditDetail",
            "path": "detail/:sql_audit_record_id",
          },
        ],
        "element": <div
          data-test-parent-id="sqlAudit"
        >
          <Outlet />
        </div>,
        "key": "sqlAudit",
        "path": ":projectID/sql-audit",
      },
      {
        "element": <div>
          dashboard
        </div>,
        "key": "dashboard",
        "path": ":projectID/dashboard",
      },
      {
        "children": [
          {
            "element": <div>
              auditPlanList
            </div>,
            "key": "auditPlanList",
            "path": "",
          },
          {
            "element": <div>
              auditPlanCreate
            </div>,
            "key": "auditPlanCreate",
            "path": "create",
          },
          {
            "element": <div>
              auditPlanUpdate
            </div>,
            "key": "auditPlanUpdate",
            "path": "update/:auditPlanName",
          },
          {
            "element": <div>
              auditPlanDetail
            </div>,
            "key": "auditPlanDetail",
            "path": "detail/:auditPlanName",
          },
          {
            "element": <div>
              auditPlanDetailReport
            </div>,
            "key": "auditPlanDetailReport",
            "path": "detail/:auditPlanName/report/:reportId",
          },
          {
            "element": <div>
              auditPlanDetailAnalyze
            </div>,
            "key": "auditPlanDetailAnalyze",
            "path": ":reportId/:sqlNum/:auditPlanName/analyze",
          },
        ],
        "element": <div
          data-test-parent-id="plane"
        >
          <Outlet />
        </div>,
        "key": "plane",
        "path": ":projectID/audit-plan",
      },
      {
        "children": [
          {
            "element": <div>
              ruleTemplate
            </div>,
            "key": "ruleTemplate",
            "path": "",
          },
          {
            "element": <div>
              ruleTemplate
            </div>,
            "key": "ruleTemplate",
            "path": "list",
          },
          {
            "element": <div>
              ruleTemplateCreate
            </div>,
            "key": "ruleTemplateCreate",
            "path": "create",
          },
          {
            "element": <div>
              ruleTemplateImport
            </div>,
            "key": "ruleTemplateImport",
            "path": "import",
          },
          {
            "element": <div>
              ruleTemplateDetail
            </div>,
            "key": "ruleTemplateDetail",
            "path": "detail/:templateName/:dbType",
          },
          {
            "element": <div>
              ruleTemplateUpdate
            </div>,
            "key": "ruleTemplateUpdate",
            "path": "update/:templateName",
          },
        ],
        "element": <div
          data-test-parent-id="ruleTemplate"
        >
          <Outlet />
        </div>,
        "key": "ruleTemplate",
        "path": ":projectID/rule/template",
      },
      {
        "children": [
          {
            "element": <div>
              progressDetail
            </div>,
            "key": "progressDetail",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="progress"
        >
          <Outlet />
        </div>,
        "key": "progress",
        "path": ":projectID/progress",
      },
      {
        "element": <div>
          Whitelist
        </div>,
        "key": "Whitelist",
        "path": ":projectID/whitelist",
      },
      {
        "element": <div>
          operationRecord
        </div>,
        "key": "operationRecord",
        "path": ":projectID/operation-record",
      },
      {
        "children": [
          {
            "element": <div>
              SQLManagement
            </div>,
            "key": "SQLManagement",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="sqlManagement"
        >
          <Outlet />
        </div>,
        "key": "sqlManagement",
        "path": ":projectID/sql-management",
      },
      {
        "children": [
          {
            "element": <div>
              pluginAuditList
            </div>,
            "key": "pluginAuditList",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="pluginAudit"
        >
          <Outlet />
        </div>,
        "key": "pluginAudit",
        "path": ":projectID/plugin-audit",
      },
      {
        "element": <div>
          sqlOptimization
        </div>,
        "key": "sqlOptimization",
        "path": ":projectID/sql-optimization",
      },
      {
        "element": <div>
          projectRedirect
        </div>,
        "key": "projectRedirect",
        "path": "*",
      },
    ],
    "element": <UNDEFINED />,
    "key": "projectDetail",
    "path": "sqle/project/*",
  },
  {
    "element": <div>
      null
    </div>,
    "key": "null",
    "path": "*",
  },
]
`;
